--- a/public/index.css
+++ b/public/index.css
@@ -80,7 +80,7 @@ body {
 	text-rendering: optimizeLegibility;
 } */
 
-.new-todo,
+/* .new-todo,
 .edit {
 	position: relative;
 	margin: 0;
@@ -97,20 +97,20 @@ body {
 	box-sizing: border-box;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-}
+} */
 
-.new-todo {
+/* .new-todo {
 	padding: 16px 16px 16px 60px;
 	border: none;
 	background: rgba(0, 0, 0, 0.003);
 	box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
-}
+} */
 
-.main {
+/* .main {
 	position: relative;
 	z-index: 2;
 	border-top: 1px solid #e6e6e6;
-}
+} */
 
 /* .toggle-all {
 	position: absolute;
@@ -135,13 +135,13 @@ body {
 	color: #737373;
 } */
 
-.todo-list {
+/* .todo-list {
 	margin: 0;
 	padding: 0;
 	list-style: none;
-}
+} */
 
-.todo-list li {
+/* .todo-list li {
 	position: relative;
 	font-size: 24px;
 	border-bottom: 1px solid #ededed;
@@ -149,7 +149,7 @@ body {
 
 .todo-list li:last-child {
 	border-bottom: none;
-}
+} */
 
 .todo-list li.editing {
 	border-bottom: none;
@@ -209,7 +209,7 @@ body {
 	text-decoration: line-through;
 }
 
-.todo-list li .destroy {
+/* .todo-list li .destroy {
 	display: none;
 	position: absolute;
 	top: 0;
@@ -224,13 +224,13 @@ body {
 	transition: color 0.2s ease-out;
 }
 
-.todo-list li .destroy:hover {
+ .todo-list li .destroy:hover {
 	color: #af5b5e;
 }
 
 .todo-list li .destroy:after {
 	content: '×';
-}
+} */
 
 .todo-list li:hover .destroy {
 	display: block;
