--- a/public/index.css
+++ b/public/index.css
@@ -1,20 +1,12 @@
-html,
-body {
-	padding: 0;
-}
-
-html {
-  margin: 0;
-}
-
-body {
+.body {
+  margin: 0 auto;
+  padding: 0;
 	font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	line-height: 1.4em;
 	background: #f5f5f5;
 	color: #4d4d4d;
 	min-width: 230px;
 	max-width: 550px;
-	margin: 0 auto;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font-weight: 300;
