--- a/src/components/todo-list/style.css
+++ b/src/components/todo-list/style.css
@@ -10,23 +10,8 @@
 	list-style: none;
 }
 
-button {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	background: none;
-	font-size: 100%;
-	vertical-align: baseline;
-	font-family: inherit;
-	font-weight: inherit;
-	color: inherit;
-	-webkit-appearance: none;
-	appearance: none;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-}
 
-input::placeholder {
+.edit::placeholder {
 	font-style: italic;
 	font-weight: 300;
 	color: #e6e6e6;
@@ -50,33 +35,33 @@ input::placeholder {
 	-moz-osx-font-smoothing: grayscale;
 }
 
-li {
+.todo-list-item {
 	position: relative;
 	font-size: 24px;
 	border-bottom: 1px solid #ededed;
 }
 
-li:last-child {
+.todo-list-item:last-child {
 	border-bottom: none;
 }
 
-li.editing {
+.todo-list-item.editing {
 	border-bottom: none;
 	padding: 0;
 }
 
-li.editing .edit {
+.todo-list-item.editing .edit {
 	display: block;
 	width: 506px;
 	padding: 12px 16px;
 	margin: 0 0 0 43px;
 }
 
-li.editing .view {
+.todo-list-item.editing .view {
 	display: none;
 }
 
-li .toggle {
+.todo-list-item .toggle {
 	text-align: center;
 	width: 40px;
 	/* auto, since non-WebKit browsers doesn't support input styling */
@@ -91,7 +76,7 @@ li .toggle {
 	opacity: 0;
 }
 
-li .toggle + label {
+.todo-list-item .toggle + .todo-title {
 	/*
 		Firefox requires `#` to be escaped - https://bugzilla.mozilla.org/show_bug.cgi?id=922433
 		IE and Edge requires *everything* to be escaped to render, so we do that instead of just the `#` - https://developer.microsoft.com/en-us/microsoft-edge/platform/issues/7157459/
@@ -101,24 +86,40 @@ li .toggle + label {
 	background-position: center left;
 }
 
-li .toggle:checked + label {
+.todo-list-item .toggle:checked + .todo-title {
 	background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E');
 }
 
-li label {
+.todo-list-item .todo-title {
 	word-break: break-all;
 	padding: 15px 15px 15px 60px;
 	display: block;
 	line-height: 1.2;
 	transition: color 0.4s;
+
+	margin-bottom: 0;
 }
 
-li.completed label {
+.todo-list-item.completed .todo-title {
 	color: #d9d9d9;
 	text-decoration: line-through;
 }
 
-li .destroy {
+.todo-list-item .destroy {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	background: none;
+	font-size: 100%;
+	vertical-align: baseline;
+	font-family: inherit;
+	font-weight: inherit;
+	color: inherit;
+	-webkit-appearance: none;
+	appearance: none;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+
 	display: none;
 	position: absolute;
 	top: 0;
@@ -133,22 +134,22 @@ li .destroy {
 	transition: color 0.2s ease-out;
 }
 
-li .destroy:hover {
+.todo-list-item .destroy:hover {
 	color: #af5b5e;
 }
 
-li .destroy:after {
+.todo-list-item .destroy:after {
 	content: '×';
 }
 
-li:hover .destroy {
+.todo-list-item:hover .destroy {
 	display: block;
 }
 
-li .edit {
+.todo-list-item .edit {
 	display: none;
 }
 
-li.editing:last-child {
+.todo-list-item.editing:last-child {
 	margin-bottom: -1px;
 }
