--- a/public/index.css
+++ b/public/index.css
@@ -1,4 +1,4 @@
-.body {
+/* .body {
   margin: 0 auto;
   padding: 0;
 	font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -10,11 +10,11 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font-weight: 300;
-}
+} */
 
 /* This class selector solves issue of Modal injecting
  padding-right of 15px which screws up styling
   https://stackoverflow.com/a/38909520 */
-.modal-open {
+/* .modal-open {
   padding-right: 0px !important;
-}
+} */
