--- a/src/layout/Body/style.css
+++ b/src/layout/Body/style.css
@@ -1,3 +1,13 @@
+.fade-appear {
+  opacity: 0.01;
+  z-index: 1;
+}
+
+.fade-appear.fade-appear-active {
+  opacity: 1;
+  transition: opacity 300ms ease-in;
+}
+
 .fade-enter {
   opacity: 0.01;
   z-index: 1;
