--- a/src/components/CreateTodoTextbox/style.module.css
+++ b/src/components/CreateTodoTextbox/style.module.css
@@ -1,6 +1,4 @@
-import styled from "styled-components";
-
-export const StyledInput = styled.input`
+.input-1 {
   position: relative;
   margin: 0;
   width: 100%;
@@ -21,10 +19,10 @@ export const StyledInput = styled.input`
   border: none;
   background: rgba(0, 0, 0, 0.003);
   box-shadow: inset 0 -2px 1px rgba(0, 0, 0, 0.03);
+}
 
-  ::placeholder {
-    font-style: italic;
-    font-weight: 300;
-    color: #e6e6e6;
-  }
-`;
+.input-1::placeholder {
+  font-style: italic;
+  font-weight: 300;
+  color: #e6e6e6;
+}
