--- a/src/layout/Body/style.module.css
+++ b/src/layout/Body/style.module.css
@@ -15,3 +15,26 @@
 .transition-group-1 {
   position: relative;
 }
+
+/* CSS Transition - start */
+
+.fade-enter {
+  opacity: 0.01;
+  z-index: 1;
+}
+
+.fade-enter-active {
+  opacity: 1;
+  transition: opacity 300ms ease-in;
+}
+
+.fade-exit {
+  opacity: 1;
+}
+
+.fade-exit-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease-in;
+}
+
+/* CSS Transition - end */
