Changed page transition animation selector

--- a/src/layout/Layout/style.module.css
+++ b/src/layout/Layout/style.module.css
@@ -3,7 +3,7 @@
   z-index: 1;
 }
 
-.fade-appear.fade-appear-active {
+.fade-appear-active {
   opacity: 1;
   transition: opacity 300ms ease-in;
 }
